--- a/dev/index.html
+++ b/dev/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>React starter app</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
 </head>
 <body>
     <div id="root"></div>
