--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <div id="root"></div>
-    <script src="/src.e31bb0bc.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
