chore: boilerplate complete

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
-    <title>React starter app</title>
+    <title>Ipê Online Judge</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="Content-Language" content="pt-br">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Programação, Provas, Javascript, Online Judge, Programming">
+    <meta name="description" content="O Ipê Online Judge é uma aplicação web dedicada a realização de provas programação"/>
 </head>
 <body>
     <div id="root"></div>
